src/bindings.rs

#[doc = " An Intel PT decoder configuration."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pt_config {
    #[doc = " The size of the config structure in bytes."]
    pub size: usize,
    #[doc = " The trace buffer begin address."]
    pub begin: *mut u8,
    #[doc = " The trace buffer end address."]
    pub end: *mut u8,
    pub decode: pt_config__bindgen_ty_1,
    #[doc = " The cpu on which Intel PT has been recorded."]
    pub cpu: pt_cpu,
    #[doc = " The errata to apply when encoding or decoding Intel PT."]
    pub errata: pt_errata,
    pub cpuid_0x15_eax: u32,
    pub cpuid_0x15_ebx: u32,
    pub mtc_freq: u8,
    pub nom_freq: u8,
    #[doc = " A collection of decoder-specific flags."]
    pub flags: pt_conf_flags,
    #[doc = " The address filter configuration."]
    pub addr_filter: pt_conf_addr_filter,
}
#[doc = " An optional callback for handling unknown packets."]
#[doc = ""]
#[doc = " If \\@callback is not NULL, it is called for any unknown opcode."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_config__bindgen_ty_1 {
    #[doc = " The callback function."]
    #[doc = ""]
    #[doc = " It shall decode the packet at \\@pos into \\@unknown."]
    #[doc = " It shall return the number of bytes read upon success."]
    #[doc = " It shall return a negative pt_error_code otherwise."]
    #[doc = " The below context is passed as \\@context."]
    pub callback: ::std::option::Option<
        unsafe extern "C" fn(
            unknown: *mut pt_packet_unknown,
            config: *const pt_config,
            pos: *const u8,
            context: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " The user-defined context for this configuration."]
    pub context: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_pt_config__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<pt_config__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(pt_config__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_config__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_config__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_config__bindgen_ty_1>())).callback as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config__bindgen_ty_1),
            "::",
            stringify!(callback)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config__bindgen_ty_1>())).context as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config__bindgen_ty_1),
            "::",
            stringify!(context)
        )
    );
}
#[test]
fn bindgen_test_layout_pt_config() {
    assert_eq!(
        ::std::mem::size_of::<pt_config>(),
        280usize,
        concat!("Size of: ", stringify!(pt_config))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_config>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_config))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).begin as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(begin)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).end as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(end)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).decode as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(decode)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).cpu as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(cpu)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).errata as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(errata)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).cpuid_0x15_eax as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(cpuid_0x15_eax)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).cpuid_0x15_ebx as *const _ as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(cpuid_0x15_ebx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).mtc_freq as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(mtc_freq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).nom_freq as *const _ as usize },
        121usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(nom_freq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).flags as *const _ as usize },
        124usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_config>())).addr_filter as *const _ as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_config),
            "::",
            stringify!(addr_filter)
        )
    );
}
extern "C" {
    #[doc = " Determine errata for a given cpu."]
    #[doc = ""]
    #[doc = " Updates \\@errata based on \\@cpu."]
    #[doc = ""]
    #[doc = " Returns 0 on success, a negative error code otherwise."]
    #[doc = " Returns -pte_invalid if \\@errata or \\@cpu is NULL."]
    #[doc = " Returns -pte_bad_cpu if \\@cpu is not known."]
    pub fn pt_cpu_errata(errata: *mut pt_errata, cpu: *const pt_cpu) -> ::std::os::raw::c_int;
}
pub const pt_packet_type_ppt_invalid: pt_packet_type = 0;
pub const pt_packet_type_ppt_unknown: pt_packet_type = 1;
pub const pt_packet_type_ppt_pad: pt_packet_type = 2;
pub const pt_packet_type_ppt_psb: pt_packet_type = 3;
pub const pt_packet_type_ppt_psbend: pt_packet_type = 4;
pub const pt_packet_type_ppt_fup: pt_packet_type = 5;
pub const pt_packet_type_ppt_tip: pt_packet_type = 6;
pub const pt_packet_type_ppt_tip_pge: pt_packet_type = 7;
pub const pt_packet_type_ppt_tip_pgd: pt_packet_type = 8;
pub const pt_packet_type_ppt_tnt_8: pt_packet_type = 9;
pub const pt_packet_type_ppt_tnt_64: pt_packet_type = 10;
pub const pt_packet_type_ppt_mode: pt_packet_type = 11;
pub const pt_packet_type_ppt_pip: pt_packet_type = 12;
pub const pt_packet_type_ppt_vmcs: pt_packet_type = 13;
pub const pt_packet_type_ppt_cbr: pt_packet_type = 14;
pub const pt_packet_type_ppt_tsc: pt_packet_type = 15;
pub const pt_packet_type_ppt_tma: pt_packet_type = 16;
pub const pt_packet_type_ppt_mtc: pt_packet_type = 17;
pub const pt_packet_type_ppt_cyc: pt_packet_type = 18;
pub const pt_packet_type_ppt_stop: pt_packet_type = 19;
pub const pt_packet_type_ppt_ovf: pt_packet_type = 20;
pub const pt_packet_type_ppt_mnt: pt_packet_type = 21;
pub const pt_packet_type_ppt_exstop: pt_packet_type = 22;
pub const pt_packet_type_ppt_mwait: pt_packet_type = 23;
pub const pt_packet_type_ppt_pwre: pt_packet_type = 24;
pub const pt_packet_type_ppt_pwrx: pt_packet_type = 25;
pub const pt_packet_type_ppt_ptw: pt_packet_type = 26;
#[doc = " Intel PT packet types."]
pub type pt_packet_type = i32;
pub const pt_ip_compression_pt_ipc_suppressed: pt_ip_compression = 0;
pub const pt_ip_compression_pt_ipc_update_16: pt_ip_compression = 1;
pub const pt_ip_compression_pt_ipc_update_32: pt_ip_compression = 2;
pub const pt_ip_compression_pt_ipc_sext_48: pt_ip_compression = 3;
pub const pt_ip_compression_pt_ipc_update_48: pt_ip_compression = 4;
pub const pt_ip_compression_pt_ipc_full: pt_ip_compression = 6;
#[doc = " The IP compression."]
pub type pt_ip_compression = i32;
pub const pt_exec_mode_ptem_unknown: pt_exec_mode = 0;
pub const pt_exec_mode_ptem_16bit: pt_exec_mode = 1;
pub const pt_exec_mode_ptem_32bit: pt_exec_mode = 2;
pub const pt_exec_mode_ptem_64bit: pt_exec_mode = 3;
#[doc = " An execution mode."]
pub type pt_exec_mode = i32;
pub const pt_mode_leaf_pt_mol_exec: pt_mode_leaf = 0;
pub const pt_mode_leaf_pt_mol_tsx: pt_mode_leaf = 32;
#[doc = " Mode packet leaves."]
pub type pt_mode_leaf = i32;
#[doc = " A TNT-8 or TNT-64 packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_tnt {
    #[doc = " TNT payload bit size."]
    pub bit_size: u8,
    #[doc = " TNT payload excluding stop bit."]
    pub payload: u64,
}
#[test]
fn bindgen_test_layout_pt_packet_tnt() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_tnt>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet_tnt))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_tnt>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_tnt))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_tnt>())).bit_size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_tnt),
            "::",
            stringify!(bit_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_tnt>())).payload as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_tnt),
            "::",
            stringify!(payload)
        )
    );
}
#[doc = " A packet with IP payload."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_ip {
    #[doc = " IP compression."]
    pub ipc: pt_ip_compression,
    #[doc = " Zero-extended payload ip."]
    pub ip: u64,
}
#[test]
fn bindgen_test_layout_pt_packet_ip() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_ip>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet_ip))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_ip>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_ip))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_ip>())).ipc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_ip),
            "::",
            stringify!(ipc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_ip>())).ip as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_ip),
            "::",
            stringify!(ip)
        )
    );
}
#[doc = " A mode.exec packet."]
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_mode_exec {
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 3usize],
}
